<resources>
    <string name="app_name">SimpleRecyclerView</string>
    <string name="drag_and_drop">Drag &amp; Drop</string>
    <string name="divider">Divider</string>
    <string name="spacing">Spacing</string>
    <string name="snappy">Snappy</string>
    <string name="linear">Linear</string>
    <string name="grid">Grid</string>
    <string name="grid_hor">Grid (Only horizontal divider)</string>
    <string name="grid_spacing_include_edge">Grid (include edge)</string>
    <string name="multi_types">Multiple Types</string>
    <string name="empty_state_view">Empty State View</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="remove_all">Remove All</string>
    <string name="load_more">Auto Load More</string>
    <string name="load_more_to_top">Load More To Top</string>
    <string name="auto_load_more_threshold">Threshold (%1$d)</string>
    <string name="swipe_to_dismiss">Swipe To Dismiss</string>
    <string name="section_header">Section Header</string>
    <string name="sticky">Sticky</string>
    <string name="linear_hor_not_include_edge">Linear Horizontal (not include edge)</string>
    <string name="linear_hor_pad_top_bottom">Linear Horizontal (Padding top &amp; bottom)</string>
    <string name="linear_hor_include_edge">Linear Horizontal (include edge)</string>
    <string name="linear_ver">Linear Vertical</string>
    <string name="linear_hor">Linear Horizontal</string>
    <string name="linear_ver_pad_left">Linear Vertical (Padding left)</string>
    <string name="linear_ver_include_edge">Linear Vertical (include edge)</string>
    <string name="diff">Cell Operations</string>
    <string name="addOrUpdate">Add or update</string>
    <string name="update">Update</string>
    <string name="grid_sequence">Grid Sequence (2332)</string>
    <string name="grid_sequence_both_last">Grid Sequence (Both orientations + last divider)</string>
    <string name="grid_sequence_spacing_not_include_edge">Grid Sequence (not include edge)</string>
    <string name="basic_usage">Basic Usage</string>
    <string name="category">Category %1$s</string>
    <string name="grid_full_span">Grid (Ad cell takes up full span)</string>
    <string name="align_center">Align Center</string>
    <string name="align_start">Align Start</string>
    <string name="section_margin_top">Section Margin Top</string>
    <string name="update_book_1">Update Book 1</string>
    <string name="grid_spacing_orientation">Grid (vertical + horizontal)</string>
</resources>
